Archive2/0e/f44f6f3df409be/output
clang version 3.4 (tags/RELEASE_34/final 206911)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:20:8: error: virtual function 'Base::f' has more than one final overrider in 'Middle'
struct Middle
       ^
main.cpp:6:19: note: overridden virtual function is here
    virtual Base *f() const = 0;
                  ^
main.cpp:12:16: note: final overrider of 'Base::f' in 'A'
    virtual A *f() const override = 0;
               ^
main.cpp:17:16: note: final overrider of 'Base::f' in 'B'
    virtual B *f() const override = 0;
               ^
main.cpp:29:22: error: return type of virtual function 'f' is not covariant with the return type of the function it overrides ('Derived *' is not derived from 'A *')
    virtual Derived *f() const override = 0;
                     ^
main.cpp:12:16: note: overridden virtual function is here
    virtual A *f() const override = 0;
               ^
main.cpp:29:22: error: return type of virtual function 'f' is not covariant with the return type of the function it overrides ('Derived *' is not derived from 'B *')
    virtual Derived *f() const override = 0;
                     ^
main.cpp:17:16: note: overridden virtual function is here
    virtual B *f() const override = 0;
               ^
3 errors generated.
